# codex-quota-monitor

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
config/: sources.json
deploy/: codex-quota-monitor.logrotate  codex-quota-monitor.service  codex-quota-monitor.timer  dry-run.sh  install.sh  listener-snapshot.sh  postflight.sh  preflight.sh  reprocess-post.sh  reprocess-unmatched.sh  resource-check.sh  run-monitor.sh
docs/architecture/: ARCHITECTURE.md
docs/decisions/: ADR-001-free-x-ingestion.md  ADR-002-at-most-once-delivery.md  README.md
docs/operations/: DEPLOYMENT.md  RUNBOOK.md
docs/product/: PRD.md
docs/security/: SECURITY.md
docs/superpowers/plans/: 2026-07-13-codex-quota-reset-monitor.md  2026-07-14-banked-reset-monitoring.md  2026-07-16-high-recall-reset-detection.md
docs/superpowers/specs/: 2026-07-13-codex-quota-reset-monitor-design.md  2026-07-14-banked-reset-monitoring-design.md  (+1 more)
docs/testing/: TESTING.md
rsshub/: package-lock.json  package.json  server.mjs
src/codex_quota_monitor/: classifier.py  cli.py  feed.py  feishu.py  models.py  service.py  settings.py  store.py
tests/: test_classifier.py  test_cli.py  test_deploy_files.py  test_documentation.py  test_feed.py  test_feishu.py  test_product_docs.py  test_rsshub_server.py  test_service.py  test_settings.py  test_store.py
tests/fixtures/: twitter-user.xml
